src/test/deca/syntax/valid/vis_spe_class_01.deca
// Description:
//    Programme testant la déclaration de champs.
//
// Resultats:
//
//
//
// Historique:
//    cree le 13/01/2023

class A {
    protected int x, y=x;
}