src/test/deca/syntax/invalid/class_method_pars_01.deca
// Description:
//    Programme testant la déclaration de méthode.
//
// Resultats:
//      Erreur
//
//
// Historique:
//    cree le 13/01/2023

class A {
    int x(int j) {

}